try to build native binaries using jpackage